--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
     "preshow:dist": "npm run build",
-    "show:dist": "live-server dist"
+    "show:dist": "live-server dist",
+    "start-server": "http-server ./dist"
   },
   "author": "coursar",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "eslint-plugin-import": "^2.20.2",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
+    "http-server": "^0.12.3",
     "jest": "^25.4.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
